<!-- merge tag para evitar redundancias y mejorar el rendimiento de UI -->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:id="@+id/tvPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/top_profile_posts_value"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPosts"
            tools:text="@string/top_profile_posts" />

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/top_profile_followers_value"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tvLikes"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toEndOf="@+id/tvPosts"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="10dp"
            android:text="@string/top_profile_followers"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/txtLikes"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toEndOf="@+id/txtPosts"
            app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />

        <TextView
            android:id="@+id/tvLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/top_profile_likes_value"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/top_profile_likes"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLikes" />

        <TextView
            android:id="@+id/txtEditProfile"
            android:layout_width="141dp"
            android:layout_height="22dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/top_profile_edit"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFollowers"
            app:layout_constraintVertical_bias="0.0"
            android:textAlignment="center"
            android:background="@drawable/grey_border"
            />
    </android.support.constraint.ConstraintLayout>
</merge>